# aoc2022

./: Cargo.toml  flake.nix
src/: bitset.rs  grid.rs  iterators.rs  lib.rs
src/inputs/: cache.rs  mod.rs
