[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
directories = "4.0"
parse-display = "0.6.0"
reqwest = { version = "0.11.13", features = ["blocking", "cookies"] }
